--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/photo-gallery-favicon.png" />
+    <meta
+      name="description"
+      content="Photo Gallery App, Search your desire photo on home page, see history of your searched photos on history page" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Photo Gallery App</title>
   </head>
   <body>
     <div id="root"></div>
